# libkrun

./: .gitignore  Cargo.toml  Makefile
examples/: Makefile
include/: libkrun.h
init/: init.c
src/arch/: Cargo.toml
src/cpuid/: Cargo.toml
src/cpuid/src/transformer/: common.rs
src/devices/: Cargo.toml
src/devices/src/virtio/fs/: device.rs  filesystem.rs  server.rs  worker.rs
src/devices/src/virtio/fs/linux/: overlayfs.rs
src/devices/src/virtio/fs/macos/: overlayfs.rs
src/devices/src/virtio/fs/macos/overlayfs/: fs.rs  tests.rs
src/devices/src/virtio/fs/tests/overlayfs/: metadata.rs  misc.rs  mod.rs  read.rs
src/devices/src/virtio/vsock/: device.rs  muxer.rs  muxer_thread.rs  tcp.rs  udp.rs
src/imago/: Cargo.toml
src/kernel/: Cargo.toml
src/libkrun/: Cargo.toml  build.rs
src/libkrun/src/: lib.rs
src/smbios/: Cargo.toml
src/utils/: Cargo.toml
src/vmm/: Cargo.toml
src/vmm/src/: builder.rs  signal_handler.rs
src/vmm/src/linux/: vstate.rs
src/vmm/src/vmm_config/: vsock.rs
