[workspace]
members = ["src/libkrun"]
resolver = "2"

[workspace.dependencies]
libc = { git = "https://github.com/frc4533-lincoln/libc.git", branch = "main", features = ["extra_traits"] }
vmm-sys-util = "0.12.1"
kvm-bindings = { version = "0.11", features = ["fam-wrappers"] }
kvm-ioctls = "0.21"
vm-memory = { version = "0.16", features = ["backend-mmap"] }
tokio = { version = "1", features = ["rt", "sync"] }
serde = { version = "1", features = ["derive"] }

[profile.dev]
#panic = "abort"

[profile.release]
#panic = "abort"
lto = true
